--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <title>DUHacks</title>
+  <title>HackEnvision</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -38,7 +38,6 @@
   <script src="https://kit.fontawesome.com/fe697e6552.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <title>DUHacks</title>
 </head>
 
 <body onload="removeLoader()" class="day-mode">
