--- a/public/index.html
+++ b/public/index.html
@@ -6,32 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta name="author" content="DUHacks">
+  <meta name="author" content="HackEnvision">
   <meta name="description"
-    content="Join us on 16-17th July 2022 with over 500 students for 36 hours of creation, innovation, & fun." />
-  <meta itemprop="name" content="DUHacks">
+    content="Join us on 4-11th January 2023 with over 100 students for 6 hours of creation, innovation, & fun." />
+  <meta itemprop="name" content="HackEnvision ">
   <meta name="google-site-verification" content="bbrVrhB_49iICKc-JLwkQG6qCWAQABQpCJ_ghVXOi2E" />
-  <meta property="og:title" content="DUHacks 2022" />
+  <meta property="og:title" content="HackEnvision 2023" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@duhacks" />
-  <meta name="twitter:creator" content="@duhacks" />
-  <meta property="og:url" content="https://duhacks.tech" />
+  <meta name="twitter:site" content="@ieeensakcet" />
+  <meta name="twitter:creator" content="@ieeensakcet" />
+  <meta property="og:url" content="" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="851" />
   <meta property="og:image:height" content="315" />
-  <meta property="og:image:alt" content="DUHacks" />
+  <meta property="og:image:alt" content="HackEnvision" />
   <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
-  <meta property="og:image" content="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png" width="16" height="60" />
+  <meta property="og:image" content="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927" width="16" height="60" />
   <meta property="og:image:secure_url"
-    content="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png" />
+    content="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927" />
   <meta name="twitter:image"
-    content="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png" />
+    content="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927" />
   <meta property="og:description"
-    content="Join us on 16-17th July 2022 with over 500 students for 36 hours of creation, innovation, & fun." />
+    content="Join us on 4-11th January 2023 with over 100 students for 6 hours of creation, innovation, & fun." />
 
   <link rel="icon" type="image/png"
-    href="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png">
+    href="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./index.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
