--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <html lang="en">
 
 <head>
-  <title>HackEnvision</title>
+  <title>HackEnvision 2.0</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="author" content="HackEnvision">
   <meta name="description"
-    content="Join us on 22nd January 2023 with over 150 students for 8 hours of creation, innovation, & fun." />
+    content="Join us on 14th of January 2024 with over 250 students for 8 hours of creation, innovation, & fun." />
   <meta itemprop="name" content="HackEnvision ">
   <meta name="google-site-verification" content="bbrVrhB_49iICKc-JLwkQG6qCWAQABQpCJ_ghVXOi2E" />
-  <meta property="og:title" content="HackEnvision 2023" />
+  <meta property="og:title" content="HackEnvision 2.0" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@ieeensakcet" />
@@ -21,14 +21,13 @@
   <meta property="og:image:width" content="851" />
   <meta property="og:image:height" content="315" />
   <meta property="og:image:alt" content="HackEnvision" />
-  <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
   <meta property="og:image" content="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927" width="16" height="60" />
   <meta property="og:image:secure_url"
     content="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927" />
   <meta name="twitter:image"
     content="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927" />
   <meta property="og:description"
-    content="Join us on 22nd of January 2023 with over 150 students for 8 hours of creation, innovation, & fun." />
+    content="Join us on 14th of January 2024 with over 250 students for 8 hours of creation, innovation, & fun." />
 
   <link rel="icon" type="image/png"
     href="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927">
