sponsors & dates updated

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="author" content="HackEnvision">
   <meta name="description"
-    content="Join us on 14th of January 2024 with over 250 students for 8 hours of creation, innovation, & fun." />
+    content="Join us on 21st of January 2024 with over 250 students for 8 hours of creation, innovation, & fun." />
   <meta itemprop="name" content="HackEnvision ">
   <meta name="google-site-verification" content="bbrVrhB_49iICKc-JLwkQG6qCWAQABQpCJ_ghVXOi2E" />
   <meta property="og:title" content="HackEnvision 2.0" />
@@ -27,7 +27,7 @@
   <meta name="twitter:image"
     content="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927" />
   <meta property="og:description"
-    content="Join us on 14th of January 2024 with over 250 students for 8 hours of creation, innovation, & fun." />
+    content="Join us on 21st of January 2024 with over 250 students for 8 hours of creation, innovation, & fun." />
 
   <link rel="icon" type="image/png"
     href="https://ik.imagekit.io/invincible/Logo-1.svg?ik-sdk-version=javascript-1.4.3&updatedAt=1670005283927">
